# elementary-tweaks

./: README.md  meson.build
data/: meson.build
debian/: control
meson/: post_install.py
po/: POTFILES  bg.po  ca.po  cs.po  da.po  de.po  el.po  elementary-tweaks-plug.pot  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  ms.po  my.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  ta.po  tr.po  tw.po  ug.po  (+2 more)
src/: CMakeLists.txt  meson.build
src/Grids/: TerminalGrid.vala
src/Panes/: AppearancePane.vala  CerberePane.vala  MiscPane.vala  PlankPane.vala  TerminalPane.vala
src/Settings/: CerbereSettings.vala  FilesSettings.vala  GalaSettings.vala  TerminalSettings.vala
src/Widgets/: Categories.vala  SettingBox.vala
