install_data(
    join_paths('icons', '32', 'preferences-desktop-tweaks.svg'),
    install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'elementary', 'categories', '32')
)
install_data(
    join_paths('icons', '32', 'preferences-tweaks-anim.svg'),
    install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'elementary', 'categories', '32')
)
install_data(
    join_paths('icons', '32', 'preferences-tweaks-cerbere.svg'),
    install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'elementary', 'categories', '32')
)
install_data(
    join_paths('icons', '32', 'preferences-tweaks-shadows.svg'),
    install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'elementary', 'categories', '32')
)
install_data(
    join_paths('icons', '32', 'preferences-tweaks-slingshot.svg'),
    install_dir: join_paths(get_option('prefix'), 'share', 'icons', 'elementary', 'categories', '32')
)
